--- a/svab_nxt/res/layout/game_move_motor_layout.xml
+++ b/svab_nxt/res/layout/game_move_motor_layout.xml
@@ -22,12 +22,69 @@
                 android:text="@string/motor_speed"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
+            <TextView
+                android:id="@+id/seek_speed_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:text="20"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/my_black_white_selector"
+                android:onClick="setSpeed"
+                android:text="set" />
+
             <SeekBar
                 android:id="@+id/seekBarA"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:max="150"
+                android:max="100"
                 android:progress="20" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:text="@string/motor_acceleration"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <TextView
+                android:id="@+id/seek_acc_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:text="6000"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/my_black_white_selector"
+                android:onClick="setAcc"
+                android:text="set" />
+
+            <SeekBar
+                android:id="@+id/seekBarB"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:max="60"
+                android:progress="60" />
         </LinearLayout>
     </LinearLayout>
 
