--- a/svab_nxt/res/layout/game_printer_test2_layout.xml
+++ b/svab_nxt/res/layout/game_printer_test2_layout.xml
@@ -1,7 +1,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    tools:context=".game.GamePrintTest2" >
 
     <svb.nxt.robot.game.opencv.OpenCVColorView
         android:id="@+id/tutorial3_activity_java_surface_view"
@@ -10,10 +11,11 @@
         android:visibility="gone" />
 
     <LinearLayout
-        android:layout_alignParentRight="true"
-        android:background="@android:color/white"
+        android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:background="@android:color/white"
         android:orientation="vertical" >
 
         <Button
@@ -34,25 +36,46 @@
             android:id="@+id/btnSaveFull"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="saveImg-full"
             android:drawableLeft="@android:drawable/ic_menu_save"
+            android:text="saveImg-full"
             android:visibility="visible" />
 
         <Button
             android:id="@+id/btnSaveCrop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="saveImg-crop100x60"
             android:drawableLeft="@android:drawable/ic_menu_save"
+            android:text="saveImg-crop96x60"
             android:visibility="visible" />
-        
+
         <Button
             android:id="@+id/btnSendCrop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="sendIMG-crop100x60"
             android:drawableLeft="@android:drawable/ic_menu_send"
+            android:text="sendIMG-crop96x60"
             android:visibility="visible" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/linearLayout1"
+        android:background="@android:color/white"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@android:id/text1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <ProgressBar
+            android:id="@android:id/progress"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 </RelativeLayout>
