--- a/svab_nxt/res/layout/game_printer_test_layout.xml
+++ b/svab_nxt/res/layout/game_printer_test_layout.xml
@@ -11,37 +11,65 @@
         android:gravity="center_horizontal"
         android:orientation="vertical" >
 
-        <Button
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/print_test_set_pen_head" />
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/my_black_white_selector"
-            android:drawableLeft="@android:drawable/ic_media_play"
-            android:drawablePadding="10dp"
-            android:onClick="penHeadTest"
-            android:padding="10dp"
-            android:text="@string/print_test_pen_head" />
+            android:orientation="horizontal" >
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/my_black_white_selector"
+                android:drawablePadding="10dp"
+                android:onClick="penHeadDown"
+                android:padding="10dp"
+                android:text="@string/print_test_pen_head_down" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/my_black_white_selector"
+                android:drawablePadding="10dp"
+                android:onClick="penHeadUp"
+                android:padding="10dp"
+                android:text="@string/print_test_pen_head_up" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/my_black_white_selector"
+                android:drawablePadding="10dp"
+                android:onClick="penHeadDownUp"
+                android:padding="10dp"
+                android:text="@string/print_test_pen_head" />
+        </LinearLayout>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@drawable/my_black_white_selector"
-            android:drawableLeft="@android:drawable/ic_media_play"
+            android:drawableLeft="@android:drawable/ic_menu_gallery"
             android:drawablePadding="10dp"
-            android:onClick="doTest"
-            android:padding="10dp"
-            android:text="@string/print_test" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/my_black_white_selector"
-            android:drawableLeft="@android:drawable/ic_media_play"
-            android:drawablePadding="10dp"
-            android:onClick="doTestDisplay"
+            android:onClick="penHeadDisplay"
             android:padding="10dp"
             android:text="@string/print_test_display" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/my_black_white_selector"
+            android:drawableLeft="@android:drawable/ic_menu_edit"
+            android:drawablePadding="10dp"
+            android:onClick="penHeadPrint"
+            android:padding="10dp"
+            android:text="@string/print_test" />
     </LinearLayout>
 
 </RelativeLayout>
