--- a/svab_nxt/res/layout/game_move_accelerometer_layout.xml
+++ b/svab_nxt/res/layout/game_move_accelerometer_layout.xml
@@ -52,6 +52,7 @@
         android:src="@android:drawable/ic_media_play" />
 
     <LinearLayout
+        android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_above="@id/button2"
@@ -74,5 +75,14 @@
             android:rotation="90"
             android:src="@android:drawable/ic_media_rew" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/button2"
+        android:layout_toRightOf="@+id/button2"
+        android:text="press to start"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </RelativeLayout>
