--- a/svab_nxt/res/layout/game_pen_printer.xml
+++ b/svab_nxt/res/layout/game_pen_printer.xml
@@ -18,7 +18,7 @@
         android:background="@android:color/white" >
 
         <LinearLayout
-            android:layout_width="250dp"
+            android:layout_width="270dp"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
@@ -58,23 +58,51 @@
                 android:orientation="horizontal"
                 android:weightSum="1" >
 
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.15"
+                    android:onClick="minusX"
+                    android:text="-" />
+
                 <EditText
                     android:id="@+id/cropX"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
+                    android:layout_weight="0.2"
                     android:ems="10"
                     android:inputType="number"
                     android:text="96" />
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.15"
+                    android:onClick="plusX"
+                    android:text="+" />
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.15"
+                    android:onClick="minusY"
+                    android:text="-" />
 
                 <EditText
                     android:id="@+id/cropY"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
+                    android:layout_weight="0.2"
                     android:ems="10"
                     android:inputType="number"
                     android:text="60" />
+
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.15"
+                    android:onClick="plusY"
+                    android:text="+" />
             </LinearLayout>
 
             <LinearLayout
