--- a/svab_nxt/res/layout/game_drill_printer.xml
+++ b/svab_nxt/res/layout/game_drill_printer.xml
@@ -109,19 +109,20 @@
                     android:text="+" />
             </LinearLayout>
 
-            <LinearLayout
+            <Button
+                android:id="@+id/btnHist"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal" >
+                android:text="Equalize histogram"
+                android:visibility="visible" />
 
-                <Button
-                    android:id="@+id/btnHist"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Equalize histogram"
-                    android:visibility="visible" />
-            </LinearLayout>
-            
+            <Button
+                android:id="@+id/btnInvert"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text=" \\ Invert \\ "
+                android:visibility="visible" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -200,7 +201,7 @@
             android:background="@drawable/my_black_white_selector"
             android:onClick="hide"
             android:padding="10dp"
-            android:text="hide" />
+            android:text="@string/drill_printer_hide" />
     </LinearLayout>
 
 </RelativeLayout>
