--- a/svab_nxt/res/layout/game_drill_printer.xml
+++ b/svab_nxt/res/layout/game_drill_printer.xml
@@ -22,12 +22,19 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
-            <Button
-                android:id="@+id/btnCapture"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableLeft="@android:drawable/ic_menu_camera"
-                android:text="caputre" />
+                android:weightSum="1" >
+
+                <Button
+                    android:id="@+id/btnCapture"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.75"
+                    android:drawableLeft="@android:drawable/ic_menu_camera"
+                    android:text="caputre" />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/ll_crop_name"
@@ -231,7 +238,7 @@
         android:background="@android:color/white"
         android:orientation="vertical" >
 
-        <TextView            
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="drill min value"
@@ -245,15 +252,15 @@
             android:hint="default: 60"
             android:inputType="number"
             android:text="60" >
-            
         </EditText>
 
-        <TextView            
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="drill max value"
             android:textAppearance="?android:attr/textAppearanceSmall" />
+
         <EditText
             android:id="@+id/drillmax"
             android:layout_width="match_parent"
@@ -262,8 +269,8 @@
             android:hint="default: 210"
             android:inputType="number"
             android:text="210" />
-        
-        <TextView            
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -278,8 +285,8 @@
             android:hint="default: 4"
             android:inputType="number"
             android:text="4" />
-        
-        <TextView            
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -294,7 +301,14 @@
             android:hint="default: 12"
             android:inputType="number"
             android:text="36" />
-
     </LinearLayout>
+
+    <Button
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:onClick="toggle"
+        android:text="x" />
 
 </RelativeLayout>
